// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/ui/menuItems/collapseMenuItem > should render correctly when isCollapsed is false 1`] = `
<div
  className="fui-MenuItem rfoezjv"
  data-automation-id="msla-collapse-menu-option"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseMove={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <span
    className="fui-MenuItem__icon ro9koqv"
  >
    <span
      data-testid="fluent-icon"
    />
  </span>
  <span
    className="fui-MenuItem__content r1ls86vo"
  >
    Collapse action
  </span>
</div>
`;

exports[`lib/ui/menuItems/collapseMenuItem > should render correctly when isCollapsed is true 1`] = `
<div
  className="fui-MenuItem rfoezjv"
  data-automation-id="msla-collapse-menu-option"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseMove={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <span
    className="fui-MenuItem__icon ro9koqv"
  >
    <span
      data-testid="fluent-icon"
    />
  </span>
  <span
    className="fui-MenuItem__content r1ls86vo"
  >
    Expand action
  </span>
</div>
`;
